# solana-ua-bootcamp-2024-08-06

practice-1/check_balance/: Cargo.toml
practice-1/check_balance/src/: main.rs
practice-1/generate_keypair/: Cargo.toml
practice-1/generate_keypair/src/: main.rs
practice-1/load_keypair/src/: main.rs
practice-1/task-6/load_keypair/: Cargo.toml
practice-2/create_token_account/: .env.example  Cargo.toml
practice-2/create_token_account/src/: main.rs
practice-2/create_token_metadata/: Cargo.toml
practice-2/create_token_metadata/src/: main.rs
practice-2/create_token_mint/: Cargo.toml
practice-2/create_token_mint/src/: main.rs
practice-2/mint_tokens/: .env.example  Cargo.toml
practice-2/mint_tokens/src/: main.rs
practice-2/send_sol/: .env.example  Cargo.toml
practice-2/send_sol/src/: main.rs
scripts/: check-balance.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  generate-keypair.ts  load-keypairs.ts  mint-tokens.ts  package-lock.json  package.json  request-airdrop.ts  send-sol.ts
